Implemented my first animation!! -  Connect four drops. Game view model now gets Igame controller for control properties.

--- a/SolvitaireGUI/Views/GameDisplay/Gameplay/TwoPlayerPlayingView.xaml
+++ b/SolvitaireGUI/Views/GameDisplay/Gameplay/TwoPlayerPlayingView.xaml
@@ -72,5 +72,14 @@
                 <!-- Add more as needed -->
             </ContentControl.Resources>
         </ContentControl>
+
+        <!-- Top Right Panel: Fine Controls -->
+        <Grid Grid.Row="0" Grid.Column="4">
+            
+            <CheckBox IsChecked="{Binding EnableAnimations}" Content="Enable Animations?" 
+                      HorizontalAlignment="Right" 
+                      HorizontalContentAlignment="Center"
+                      VerticalContentAlignment="Center"/>
+        </Grid>
     </Grid>
 </UserControl>
