--- a/SolvitaireGUI/Views/GameDisplay/Games/SolitaireBoardView.xaml
+++ b/SolvitaireGUI/Views/GameDisplay/Games/SolitaireBoardView.xaml
@@ -20,7 +20,7 @@
         <local:CardToImagePathMultiConverter x:Key="CardToImageMultiConverter" />
         <local:FanOffsetConverter x:Key="FanOffsetConverter"/>
         <DataTemplate x:Key="CardTemplate">
-            <Grid>
+            <Grid MouseLeftButtonUp="Card_MouseLeftButtonUp">
                 <Image Width="{StaticResource CardWidth}" Height="{StaticResource CardHeight}">
                     <Image.Source>
                         <MultiBinding Converter="{StaticResource CardToImageMultiConverter}">
@@ -61,8 +61,13 @@
             <ColumnDefinition Width="10" />
         </Grid.ColumnDefinitions>
 
-        <ContentControl Grid.Column="1" Grid.Row="1" DataContext="{Binding StockPile}">
+        <!-- Stock Pile -->
+        <ContentControl Grid.Column="1" Grid.Row="1" 
+                        MouseLeftButtonUp="Pile_MouseLeftButtonUp"
+                        DataContext="{Binding StockPile}">
             <Grid>
+                <!-- Always-present transparent rectangle for hit testing -->
+                <Rectangle Width="80" Height="120" Fill="Transparent"/>
                 <Image Width="80" Height="120">
                     <Image.Style>
                         <Style TargetType="Image">
@@ -81,10 +86,11 @@
         <!-- Waste Pile -->
         <ItemsControl Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="2"
                       VirtualizingStackPanel.IsVirtualizing="True"
-                     ItemsSource="{Binding WastePile,  
+                      MouseLeftButtonUp="Pile_MouseLeftButtonUp"
+                      ItemsSource="{Binding WastePile,  
                            Converter={StaticResource TakeLastConverter}, ConverterParameter=3}"  
-                     ItemTemplate="{StaticResource CardTemplate}"
-                     AlternationCount="10">  
+                      ItemTemplate="{StaticResource CardTemplate}"
+                      AlternationCount="10">  
            <ItemsControl.ItemsPanel>  
                <ItemsPanelTemplate>  
                    <StackPanel Orientation="Horizontal" />  
@@ -110,7 +116,7 @@
                       ItemsSource="{Binding FoundationPiles}">
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <StackPanel>
+                    <StackPanel MouseLeftButtonUp="Pile_MouseLeftButtonUp">
                         <ContentControl Content="{Binding TopCard}" 
                                         ContentTemplate="{StaticResource CardTemplate}" />
                     </StackPanel>
@@ -137,7 +143,8 @@
                                   ItemTemplate="{StaticResource CardTemplate}"
                                   ItemsPanel="{StaticResource FannedPanel}"
                                   ItemContainerStyle="{StaticResource FannedItemStyle}"
-                                  AlternationCount="1000" />
+                                  AlternationCount="1000" 
+                                  MouseLeftButtonUp="Pile_MouseLeftButtonUp" />
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
             <ItemsControl.Margin>
